# compliance-360-ai

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/contract_datasets/: README.md  category_regulations.json
data/contract_datasets/normalized/: contracts_ai.jsonl  contracts_all.jsonl  contracts_bank.jsonl  contracts_cybersecurity.jsonl
data/regulatory_corpus/: aml_kyc.json  basel_iii.json  gdpr.json  hipaa.json  iso27001.json  iso42001.json  local_law.json  nist_csf.json  pci_dss.json  privacy_controls.json  soc2.json  sox.json
data/sample_contracts/: sample_msa.txt
docs/: architecture.md  prompt_engineering_log.md
infra/: .env.example  EC2_DEPLOY.md  docker-compose.yml
n8n/: README.md  compliance_audit.json
scripts/: docker_layer3.ps1  import_contract_datasets.py  run_dev.ps1  seed_contract_corpus.py  seed_regulatory_corpus.py  smoke_test.py
services/doc_analyzer_service/: Dockerfile  requirements.txt
services/guardrails_service/: Dockerfile  requirements.txt
services/langgraph_agent_service/: Dockerfile  requirements.txt
services/orchestrator/: requirements.txt
services/rag_service/: Dockerfile  requirements.txt
shared/prompts/: compliance_analyst_agent_v1.md  guardrails_v1.md  information_extractor_v1.md  ollama_assistant_v1.md  rag_retrieval_v1.md
shared/schemas/: README.md  pyproject.toml
shared/schemas/src/auditor_schemas/: __init__.py  audit.py  contract.py  finding.py  guardrails.py  regulation.py
webui/: README.md  package-lock.json  package.json  tailwind.config.ts
(+82 files in other folders)
